Hopefully fixed issue on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -313,6 +313,24 @@ p:first-child {
       margin-top: 30px; /* Adjust margin as needed */
   }
 
+  .header-title-container {
+      position: relative; /* This makes the container a positioned ancestor */
+      height: 24px; /* Adjust the height as needed */
+      width: 160px;
+      margin-left: 6px;
+  }
+
+  .header-title-name {
+      font-family: 'DM Sans', sans-serif;
+      font-weight: 500;
+      font-size: 18px;
+      user-select: none;
+      margin: 0;
+      color: black;
+      position: absolute;
+      bottom: 0; /* Sticks the text to the bottom */
+  }
+
 }
 
 .Home {
